improved styling & image resizing
added more content and transitions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="banner">
         <div class="banner-container">
-            <img src="./images/Artboard 1.png">
+            <img src="./images/Artboard 2.png">
 
         </div>
     </div>
@@ -20,7 +20,7 @@
     
         <div class="bio-description-container">
             <ul>
-                <li>Frontend Developer</li> 
+                <li id="fd">Frontend Developer</li> 
                 <li>Graphic Designer</li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
 
         <div class="footer">
             <div class="footer-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aliquid saepe error ducimus odio libero esse impedit ab quibusdam nemo?</p>
+                <p>Junior Frontend Developer deeply committed to crafting exceptional and elevated user experiences through meticulous UX/UI design. This website is crafted using HTML, CSS, and JavaScript exclusively. For inquiries and collaborations, <br> please reach out at catherinesmontano@gmail.com.</p>
             </div>
         </div>
 
