fixed media query
fixed positioning for desktops

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&family=Krub&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="whole-body">
     <div class="banner">
         <div class="banner-container">
             <img src="./images/Artboard 2.png">
@@ -39,6 +40,7 @@
             <div class="footer-container">
                 <p>Junior Frontend Developer deeply committed to crafting exceptional and elevated user experiences through meticulous UX/UI design. This website is crafted using HTML, CSS, and JavaScript exclusively. For inquiries and collaborations, <br> please reach out at catherinesmontano@gmail.com.</p>
             </div>
+        </div>
         </div>
 
 </body>
