updated links again

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="links-container">
             <ul>
                 <li><a href="https://www.linkedin.com/in/catherine-montano-03904b170/">LinkedIn</a></li>
-                <li><a href="https://icymontano.dev">Portfolio</a></li>
+                <li><a href="https://www.icymontano.dev/">Portfolio</a></li>
                 <li><a href="https://on.contra.com/tqdFLt">Design Portfolio</a></li>
                 <li><a href="https://github.com/soybananamilk">Github</a></li>
                 <li><a href="https://www.tiktok.com/@404icy">TikTok</a></li>
