--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="links-container">
             <ul>
                 <li><a href="https://www.linkedin.com/in/catherine-montano-03904b170/">LinkedIn</a></li>
+                <li><a href="https://impartial-gruyere-2e5.notion.site/Hi-I-m-Icy-e13d4c5f6ada4c5a97150f338846d65f?pvs=74">Notion Portfolio</a></li>
                 <li><a href="https://www.icymontano.dev/">Portfolio</a></li>
                 <li><a href="https://on.contra.com/tqdFLt">Design Portfolio</a></li>
                 <li><a href="https://github.com/soybananamilk">Github</a></li>
